# fap-studio-gtk

./: ChangeLog  Makefile.am  configure.ac
debian/: fap-studio-gtk.install
files/: empty.xml  rock_1.xml  rock_2.xml  ut_emtran_spec_2.xml
src/: Makefile.am  app.cpp  app.h  main.cpp  mainwnd.cpp  mainwnd.h
