SUBDIRS = src

iconsdir = $(pkgdatadir)/icons
dist_icons_DATA = \
	     img/tbar_btn_run.png \
	     img/tbar_btn_pause.png \
	     img/tbar_btn_stop.png \
	     img/tbar_btn_start.png \
	     img/tbar_btn_step.png


templdir = $(pkgdatadir)/templ
dist_templ_DATA = \
	     files/rock_1.xml \
	     files/empty.xml


EXTRA_DIST = \
	     img/tbar_btn_run.png \
	     img/tbar_btn_pause.png \
	     img/tbar_btn_stop.png \
	     img/tbar_btn_start.png \
	     img/tbar_btn_step.png \
	     files/rock_1.xml \
	     files/empty.xml
	

